profile image changed

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h1 class="text-center">A little about me ✍🏾</h1>
             <div class="row mt-2">
                 <div class="col-lg-4 mt-4">
-                    <img src="images/about.png" class="imageAboutPage" alt="">
+                    <img src="images/about.jpg" class="imageAboutPage" alt="">
                 </div>
 
                 <div class="col-lg-8">
@@ -274,7 +274,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Real Estate Times Africa with Valco, GES, Ministries of Energy & Education, Ghana.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Product
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Product
                                 Manager
                             <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong>Daniel
                                 Partey,
@@ -317,7 +317,7 @@
                             <h4 class="card-title" style="font-weight: 700">Document Management System</h4>
                             <p class="card-text mt-3" style="font-weight: 300">Designed for the Eastern Regional
                                 Coordinating Council, Ghana.</p>
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong> UI/UX
                                 Designer
 
 
@@ -347,7 +347,7 @@
 
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UX Designer
                                 & Android Developer
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong> Daniel
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Team: </strong> Daniel
                                 Partey
                             </p>
                             <div class="text-left card-button">
@@ -368,7 +368,7 @@
 
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
                                 Designer & Android Developer
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Team:<br></strong> Daniel
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Team: </strong> Daniel
                                 Partey
                                 </p>
                             <div class="text-left card-button">
@@ -424,7 +424,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Procurement in China · Educational Consult in China · Graphic Design.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Web Developer
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Web Developer
                             </p>
                             <div class="text-left card-button">
                                 <a href="https://ranxbrand.com" class="btn btn-secondary" target=”_blank”>Website →</a>
@@ -538,7 +538,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 A sachet and bottled water company.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong> Brand & Package
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand & Package
                                 Designer
 
                             </p>
@@ -605,7 +605,7 @@
                             <p class="card-text mt-3" style="font-weight: 300">
                                 A local drink made with ginger and rice/millet.</p>
 
-                            <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong>Brand & Package
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong>Brand & Package
                                 Designer
 
                             </p>
