about img renamed

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h1 class="text-center">A little about me ✍🏾</h1>
             <div class="row mt-2">
                 <div class="col-lg-4 mt-4">
-                    <img src="images/about.jpg" class="imageAboutPage" alt="">
+                    <img src="images/aboutImage.jpg" class="imageAboutPage" alt="">
                 </div>
 
                 <div class="col-lg-8">
@@ -111,7 +111,7 @@
                     <hr>
                     <p></p>
                     <h5 style="font-weight: 400"> In product management, I have managed, designed and developed several software solutions
-                        individually and with teams, where I conducted UX research, designed user interfaces and programed 
+                        individually and with teams, where I conducted UX research, designed user interfaces and programmed 
                         for Apex & Over Ltd. and other freelance clients.
                     </h5>
                     <p> </p>
