--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <img class="card-img-top" src="images/1ghalonImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
                             <h4 class="card-title" style="font-weight: 700">1GHALON App</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">Lastest fuel prices in Ghana. Updated
+                            <p class="card-text mt-3" style="font-weight: 300">Latest fuel prices in Ghana. Updated
                                 with actual prices at the physical pump.
                             </p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand &
