--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <h4 class="card-title mt-3">Product Management</h4>
                             <p class="card-text mt-3" style="font-weight: 300">Manage
                                 the product lifecycle from development to positioning and pricing with
-                                tools like Jira & Asana a ensure that the process priortizes
+                                tools like Jira & Asana to ensure that the process priortizes
                                 the target users.
                             </p>
                         </div>
