--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <!-- <div class="navbar-brand">
+            <div class="navbar-brand">
                 <a href="#">
                     <img alt="" src="images/icon-grey.png" width="35" height="35">
                 </a>
-            </div> -->
+            </div>
 
             <a class="navbar-brand" href="#">Desmond</a>
 
@@ -83,8 +83,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title" style="font-weight: 600">Brand & Product Manager</h2>
-                    <p class="hero_desc" style="font-weight: 300">👋🏾 Hi, I'm Desmond Kwame Nunoo</p>
+                    <h2 class="hero_title" style="font-weight: 600">Desmond Kwame Nunoo</h2>
+                    <p class="hero_desc" style="font-weight: 300">I'm a Brand & Product Manager</p>
                 </div>
             </div>
         </div>
@@ -260,6 +260,7 @@
     <!-- portfolio section-->
 
     <section id="portfolio">
+        
         <div class="portfolio-text container mt-3">
             <h1 class="text-center">Favourite works 👨🏾‍💻</h1>
             <hr>
@@ -621,6 +622,7 @@
 
 
         </div>
+        
     </section>
 
     <!-- contact section-->
@@ -631,7 +633,7 @@
             <div class="row mt-4 text-center">
 
                 <h4 style="font-weight: 300">
-                    Send me an email <a class="apexandover" style="font-weight: 500"
+                    Send me an email <a class="link-text" style="font-weight: 500"
                         href="mailto:desmondknunoo@gmail.com" target=”_blank”>here</a>.
                 </h4>
             </div>
