--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <div class="navbar-brand">
+            <!-- <div class="navbar-brand">
                 <a href="#">
                     <img alt="" src="images/icon-grey.png" width="35" height="35">
                 </a>
-            </div>
+            </div> -->
 
             <a class="navbar-brand" href="#">Desmond</a>
 
