SUT link updated

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                                 Benjamin Ikeh, Charles Kwabena & Lennox Ayi-Bisahnox
                             </p>
                             <div class="text-left card-button">
-                                <a href="https://schoolsundertrees.com" class="btn btn-secondary"
+                                <a href="https://realestatetimesafrica.com/news/education/809/Zero+Schools+Under+Trees+Website+Launched+in+Accra" class="btn btn-secondary"
                                     target=”_blank”>Website →</a>
                             </div>
                         </div>
