--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             </p>
 
                             <div class="text-left card-disabbled">
-                                <a class="btn btn-secondary">Privat 🔒</a>
+                                <a class="btn btn-secondary">Private 🔒</a>
                             </div>
                         </div>
                     </div>
