SUT button updated

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             </p>
                             <div class="text-left card-button">
                                 <a href="https://realestatetimesafrica.com/news/education/809/Zero+Schools+Under+Trees+Website+Launched+in+Accra" class="btn btn-secondary"
-                                    target=”_blank”>Website →</a>
+                                    target=”_blank”>Details →</a>
                             </div>
                         </div>
                     </div>
