--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <div class="navbar-brand">
+            <!-- <div class="navbar-brand">
                 <a href="#">
                     <img alt="" src="images/icon-grey.png" width="35" height="35">
                 </a>
-            </div>
+            </div> -->
 
             <a class="navbar-brand" href="#">Desmond</a>
 
@@ -83,7 +83,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h4 class="hero_title" style="font-weight: 700">Desmond Kwame Nunoo</h4>
+                    <h2 class="hero_title" style="font-weight: 600">Desmond Kwame Nunoo</h2>
                     <p class="hero_desc" style="font-weight: 300">I'm a Brand & Product Manager</p>
                 </div>
             </div>
@@ -264,7 +264,7 @@
         <div class="portfolio-text container mt-3">
             <h1 class="text-center">Favourite works 👨🏾‍💻</h1>
             <hr>
-            <p class="hero_desc text-center" style="font-weight: 300"> Product Design & Software Development
+            <p class="hero_desc text-center" style="font-weight: 300"> Product Management
             </p>
             <div class="row">
                 <div class="col-lg-4 mt-4">
@@ -487,7 +487,7 @@
             </div>
 
             <hr>
-            <p class="hero_desc text-center" style="font-weight: 300"> Brand & Graphic Design
+            <p class="hero_desc text-center" style="font-weight: 300"> Brand Design
             </p>
 
 
