--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
-            <!-- <div class="navbar-brand">
+            <div class="navbar-brand">
                 <a href="#">
                     <img alt="" src="images/icon-grey.png" width="35" height="35">
                 </a>
-            </div> -->
+            </div>
 
             <a class="navbar-brand" href="#">Desmond</a>
 
@@ -83,8 +83,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title" style="font-weight: 600">Desmond Kwame Nunoo</h2>
-                    <p class="hero_desc" style="font-weight: 300">I'm a Brand & Product Manager</p>
+                    <h1 class="hero_title">Hi, I'm Desmond!</h1>
+                    <h2 class="hero_desc" style="font-weight: 300">An experienced Brand & Product Manager</h2>
                 </div>
             </div>
         </div>
