--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                         <div class="card-body">
                             <i class='fa servicesIcon fa-mobile'></i>
                             <h4 class="card-title mt-3">Android Development</h4>
-                            <p class="card-text mt-3" style="font-weight: 300">Collaborate and write in Java and Kotlin
-                                on Android Studio
+                            <p class="card-text mt-3" style="font-weight: 300">Collaborate and write Java and Kotlin
+                                code in Android Studio
                                 to develop Android apps. Monitor the performance of live apps and fix bugs.
                             </p>
                         </div>
