--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <title>Desmond Kwame Nunoo</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#333333">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="icons/site.webmanifest">
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#333333">
     <meta name="msapplication-TileColor" content="#111111">
     <meta name="theme-color" content="#ffffff">
 
@@ -63,13 +63,11 @@
                         <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
+                  
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -118,96 +116,7 @@
     </section>
 
 
-    <!-- about section-->
-    <section id="about" style="background-color: #efefef">
-        <div class="container mt-3">
-            <h1 class="text-center">A little about me ✍🏾</h1>
-            <div class="row mt-2">
-                <div class="col-lg-4 mt-4">
-                    <img src="images/aboutImage.jpg" class="imageAboutPage" alt="">
-                </div>
-
-                <div class="col-lg-8">
-                    <br>
-                    <h5 style="font-weight: 400"> I'm a brand & digital product designer who thrives in
-                        bridging the gap between product owners, software developers and their target users.
-                        
-                    </h5>
-                    <p> </p>
-                    <h5 style="font-weight: 400"> My over 5 years of experience cuts across the software, advertising, publishing and multimedia
-                        industries.
-                    </h5>
-                    <p> </p>
-                    <h5 style="font-weight: 400"> In product management, I have managed, designed and developed several
-                        software solutions individually and with teams, where I conducted UX research, designed user interfaces 
-                        and programmed for clients, employers and their clients.
-                    </h5>
-                    <p> </p>
-                    <h5 style="font-weight: 400">
-                        As a brand & graphic designer, I have designed brand identities, publications and artworks for traditional &
-                        digital promotion for clients, employers and their clients.
-                    </h5>
-                    <p> </p>
-                     <hr>
-                    <p></p>
-                    <h5 style="font-weight: 400"> In product management, I have managed, designed and developed several
-                        software solutions
-                        individually and with teams, where I conducted UX research, designed user interfaces and
-                        programmed
-                        for Apex & Over Ltd. and other freelance clients.
-                    </h5>
-                    <p> </p>
-
-                    <h5 style="font-weight: 400">
-                        As a brand & graphic designer, I have designed brand identities and artworks for social media
-                        marketing and promotion to communicate the business goals and drive sales of brands and their
-                        products while at EPP
-                        Books Services and Bluevyne Ltd., and also, for freelance clients.
-                    </h5>
-                    <p> </p>
-                    <hr>
-                    <h5 style="font-weight: 400">
-                        I have a first class BA. Publishing Studies (Design Major) degree from Kwame Nkrumah University
-                        of Science and Technology.
-                    </h5>
-                    <p> </p>
-
-                    <h5 style="font-weight: 400">
-                        I competed with my team to reach the quarter-finals of MTN Apps Challenge 2018 &
-                        the semi-finals of Spring Board Road Show: Talent Expose 2019 where we presented various apps
-                        including U4nor.
-                    </h5>
-                    <p> </p>
-
-                    <div class="col-md-8 col-sm-6 col-12">
-                        <ul class="social-icons">
-                            <li><a class="linkedin" style="background-color: #121212"
-                                    href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-linkedin-in"></i></a></li>
-                            <li><a class="behance" style="background-color: #121212"
-                                    href="https://behance.net/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-behance"></i></a></li>
-                            <li><a class="twitter" style="background-color: #121212"
-                                    href="https://twitter.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-twitter"></i></a></li>
-                            <li><a class="github" style="background-color: #121212"
-                                    href="https://github.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-github"></i></a></li>
-                            <li><a class="instagram" style="background-color: #121212"
-                                    href="https://instagram.com/desmondknunoo" target=”_blank”><i
-                                        class="fab fa-instagram"></i></a></li>
-                            <!-- <li><a class="facebook" style="background-color: #121212"
-                                        href="https://facebook.com/desmondknunoo" target=”_blank”><i
-                                            class="fab fa-facebook-f"></i></a></li> -->
-                        <!-- </ul>
-                        <p> </p>
-                        <p> </p>
-                        <p> </p>
-                    </div>
-
-                </div>
-    </section>  -->
-
+   
     <!-- services section-->
 
     <!-- <section id="services">
