--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
             <div class="row">
 
                 <div class="col-lg-4 mt-4">
-                    <div class="card2">
+                    
                         <img class="card-img-top" src="images/closeupImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Closeup Social Media Campaign</h4>
+                            <div class="card2">
+                                <p class="card-text mt-3"style="font-weight: 200">GRAPHIC DESIGN • SOCIAL MEDIA • STRATEGY</p>
+                                <hr>
+                            <h4 class="card-title" style="font-weight: 700">Closeup Promo</h4>
                             <p class="card-text mt-3" style="font-weight: 200">COVID-19 social media campaign for
                                 Closeup.</p>
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Role: </strong> Graphic
-                                Designer
 
                             </p>
                             <div class="text-left card-button">
@@ -145,12 +146,11 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/btfImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
+                            <p class="card-text mt-3"style="font-weight: 200">BRANDING • PACKAGE DESIGN • GRAPHIC DESIGN</p>
+                            <hr>
                             <h4 class="card-title" style="font-weight: 700">Break The Fast</h4>
                             <p class="card-text mt-3" style="font-weight: 200">
                                 Sells yummy meals for breaking your fast.
-                            </p>
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Role: </strong> Brand Designer
-
                             </p>
 
                             <div class="text-left card-button">
@@ -165,13 +165,12 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/ocanImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">OCAN Mineral Water</h4>
+                            <p class="card-text mt-3"style="font-weight: 200">BRANDING • PACKAGE DESIGN • GRAPHIC DESIGN</p>
+                            <hr>
+                            <h4 class="card-title" style="font-weight: 700">OCAN</h4>
                             <p class="card-text mt-3" style="font-weight: 200">
                                 A sachet and bottled water company.</p>
 
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Role:</strong> Brand Designer
-
-                            </p>
                             <div class="text-left card-button">
                                 <a href="https://www.behance.net/gallery/85272133/OCAN-Mineral-Water-Package-Design"
                                     class="btn btn-secondary" target=”_blank”>Behance →</a>
@@ -183,18 +182,19 @@
 
 
             </div>
-
+            
+            <hr>
 
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
                         <img class="card-img-top" src="images/u4norImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">U4nor App</h4>
+                            <p class="card-text mt-3"style="font-weight: 200">UI/UX • PRODUCT • MOBILE • ANDROID</p>
+                            <hr>
+                            <h4 class="card-title" style="font-weight: 700">U4nor</h4>
                             <p class="card-text mt-3" style="font-weight: 200">Relevant and reliable campus news curated
                                 for tertiary students in Ghana.</p>
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Role:<br></strong> UI/UX
-                                Designer & Android Developer
                             </p>
                             <div class="text-left col-md-4 col-sm-6 col-12">
                                 <ul class="card-button">
@@ -214,13 +214,13 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/fudrinImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Fudrin App</h4>
+                            <p class="card-text mt-3"style="font-weight: 200">UI/UX • PRODUCT • MOBILE • ANDROID</p>
+                            <hr>
+                            <h4 class="card-title" style="font-weight: 700">Fudrin</h4>
                             <p class="card-text mt-3" style="font-weight: 200">
                                 Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
 
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Role:<br></strong> UI/UX
-                                Designer & Android Developer
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Team: </strong> Daniel
+                            <p style="font-weight: 200"><strong style="font-weight: 600">Collaborator: </strong> Daniel
                                 Partey
                             </p>
                             <div class="text-left card-button">
@@ -237,13 +237,11 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary App</h4>
+                            <p class="card-text mt-3"style="font-weight: 200">UI/UX • PRODUCT • MOBILE • ANDROID</p>
+                            <hr>
+                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
                             <p class="card-text mt-3" style="font-weight: 200">An offline dictionary containing
                                 terms and their meanings for the publishing industry.</p>
-                            <p style="font-weight: 200"><strong style="font-weight: 600">Role:<br></strong> UI/UX
-                                Designer & Android Developer
-
-                            </p>
                             <div class="text-left col-md-4 col-sm-6 col-12">
                                 <ul class="card-button">
 
