home page animation added

--- a/about.html
+++ b/about.html
@@ -130,7 +130,85 @@
                
             </div>
 </section> 
+   <!-- services section-->
 
+   <section id="services">
+    <div class="container services-text mt-3">
+        <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left"
+            style="color: #fff; margin-left: 2em; margin-right: 2em;">My Expertise</h1>
+
+        <div class="row">
+
+            <div class="col-lg-4 mt-4">
+                <div class="card servicesText">
+                    <div class="card-body">
+                        <i class='fa servicesIcon fa-pen-nib'></i>
+                        <h4 class="card-title mt-3">Brand & Graphic Design</h4>
+                        <p class="card-text mt-3" style="font-weight: 200">Identify the brand message then design
+                            various marketing tools, such as logos and other brand identity elements that convey the
+                            intended message. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 mt-4">
+                <div class="card servicesText">
+                    <div class="card-body">
+                        <i class='fa servicesIcon fa-layer-group'></i>
+                        <h4 class="card-title mt-3">Product Design</h4>
+                        <p class="card-text mt-3" style="font-weight: 200">Identify the user's problems,
+                            group the problems, brainstorm solutions, prototype with Figma, test
+                            on users, gather insights, and iterate if necessary.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 mt-4">
+                <div class="card servicesText">
+                    <div class="card-body">
+                        <i class="fa servicesIcon fa-cubes"></i>
+                        <h4 class="card-title mt-3">Product Management</h4>
+                        <p class="card-text mt-3" style="font-weight: 200">Manage
+                            the product lifecycle from development to positioning and pricing with
+                            tools like Jira & Asana to ensure that the process priortizes
+                            the target users.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="col-lg-4 mt-4">
+                <div class="card servicesText">
+                    <div class="card-body">
+                        <i class='fa servicesIcon fa-mobile'></i>
+                        <h4 class="card-title mt-3">Android Development</h4>
+                        <p class="card-text mt-3" style="font-weight: 200">Collaborate and write Java and Kotlin
+                            code in Android Studio
+                            to develop Android apps. Monitor the performance of live apps and fix bugs.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4 mt-4">
+                <div class="card servicesText">
+                    <div class="card-body">
+                        <i class='fa servicesIcon fa-desktop'></i>
+                        <h4 class="card-title mt-3">Front-End Development</h4>
+                        <p class="card-text mt-3" style="font-weight: 200">Collaborate and develop the front-end of
+                            webapps
+                            with code using Vue and Bootstrap and no-code tools like WordPress, Webflow, Shopify or
+                            Wix.
+                        </p>
+                    </div>
+                </div>
+            </div> -->
+        </div>
+
+    </div>
+</section>
 <footer class="site-footer">
 
     <div class="container">
