push home, start work on other pages

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#home">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -112,10 +112,10 @@
             <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left"
                 style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Selected Work</h1>
 
-            <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
+            <!-- <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
                 Designing and managing digital products. View full portfolio
                 <a class="link-text" style="font-weight: 300" href="portfolio.html">here</a>.
-            </h1>
+            </h1> -->
 
             <div class="row">
 
