--- a/work.html
+++ b/work.html
@@ -4,9 +4,9 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Desmond Kwame Nunoo</title>
+    <title>Desmond Kwame Nunoo | Work</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico" />
 
@@ -28,15 +28,8 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
 
-    <!-- Smartlook analytics -->
-    <script type='text/javascript'>
-        window.smartlook || (function (d) {
-            var o = smartlook = function () { o.api.push(arguments) }, h = d.getElementsByTagName('head')[0];
-            var c = d.createElement('script'); o.api = new Array(); c.async = true; c.type = 'text/javascript';
-            c.charset = 'utf-8'; c.src = 'https://web-sdk.smartlook.com/recorder.js'; h.appendChild(c);
-        })(document);
-        smartlook('init', 'ad56b54af391be51e6d4852f75b1b564b024f606', { region: 'eu' });
-    </script>
+    <!-- Add analytics here-->
+
 </head>
 
 <body>
@@ -44,13 +37,12 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
             <div class="navbar-brand">
-                <a href="#">
+                <a href="index.html">
                     <img alt="" src="images/icon-grey.png" width="35" height="35">
                 </a>
             </div>
 
-            <a class="navbar-brand" href="#">Desmond</a>
-
+            <a class="navbar-brand" href="index.html">Desmond</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -62,33 +54,30 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="https://instagram.com/desmondknunoo" target=”_blank”>Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
-
             </div>
         </div>
     </nav>
-   
-
-
-   
 
     <!-- portfolio section-->
 
     <section id="portfolio">
 
         <div class="portfolio-text container mt-3">
-            <h1 class="text-center">Works 👨🏾‍💻</h1>
+            <h1 class="text-center" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Product Development</h1>
             <hr>
-            <p class="hero_desc text-center" style="font-weight: 300"> Digital Products
             </p>
             <div class="row">
                 <div class="col-lg-4 mt-4">
@@ -144,8 +133,6 @@
                                 Coordinating Council, Ghana.</p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong> UI/UX
                                 Designer
-
-
                             </p>
 
                             <div class="text-left card-disabbled">
@@ -310,10 +297,9 @@
                 </div>
             </div>
 
+          
+            <h1 class="text-center" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Brand & Graphic Design</h1>
             <hr>
-            <p class="hero_desc text-center" style="font-weight: 300"> Brand Design
-            </p>
-
 
             <div class="row">
 
@@ -451,18 +437,21 @@
 
     </section>
 
+   
+
+
     <!-- contact section-->
-    <section id="contact">
+    <section class="bgimage2" id="contact">
         <div class="container mt-3 contactContent">
-            <h1 class="text-center">Let's work together 😊</h1>
 
-            <div class="row mt-4 text-center">
+            <h1 class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left"
+                style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Contact</h1>
 
-                <h4 style="font-weight: 300">
-                    Send me an email <a class="link-text" style="font-weight: 500" href="mailto:desmondknunoo@gmail.com"
-                        target=”_blank”>here</a>.
-                </h4>
-            </div>
+            <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
+                Let's work together. Send me an email
+                <a class="link-text" style="font-weight: 300" href="mailto:desmondknunoo@gmail.com">here</a>.
+            </h1>
+
         </div>
     </section>
     <!-- footer section-->
@@ -485,8 +474,6 @@
                                     class="fab fa-twitter"></i></a></li>
                         <li><a class="github" href="https://github.com/desmondknunoo" target=”_blank”><i
                                     class="fab fa-github"></i></a></li>
-                        <li><a class="instagram" href="https://instagram.com/desmondknunoo" target=”_blank”><i
-                                    class="fab fa-instagram"></i></a></li>
 
                     </ul>
                 </div>
