View more work updated

--- a/index.html
+++ b/index.html
@@ -102,12 +102,8 @@
         <div class="portfolio-text container mt-3">
             <h1 class="text-left" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Selected Work
             </h1>
-
             <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
-                Designing and managing digital products. View full portfolio
-                <a class="link-text" style="font-weight: 300" href="work.html">here</a>.
-            </h1>
-
+                Developing digital products & designing solutions.</h1>
             <div class="row">
 
                 <div class="col-lg-4 mt-4">
@@ -252,6 +248,11 @@
                     </div>
                 </div>
             </div>
+            <hr>
+            <h1 class="text-left" style="color: #d7d7d7; font-weight: 100; margin-left: 2em; margin-right: 2em;">
+                View more work
+                <a class="link-text" style="font-weight: 300" href="work.html">here</a>.
+            </h1>
         </div>
     </section>
 
