. removed from copyright

--- a/work.html
+++ b/work.html
@@ -460,7 +460,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-12">
-                    <p class="copyright-text">© 2022 Desmond Kwame Nunoo.
+                    <p class="copyright-text">© 2022 Desmond Kwame Nunoo
 
                     </p>
                 </div>
