Package Design to Package

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <div class="card2 portfolioContent">
                         <img class="card-img-top" src="images/ocanImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <p class="card-text mt-3" style="font-weight: 200">BRANDING • PACKAGE DESIGN •
+                            <p class="card-text mt-3" style="font-weight: 200">BRANDING • PACKAGE •
                                 GRAPHIC
                                 DESIGN</p>
                             <hr>
