--- a/work.html
+++ b/work.html
@@ -107,7 +107,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/1ghalonImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">1GHALON App</h4>
+                            <h4 class="card-title" style="font-weight: 700">1GHALON</h4>
                             <p class="card-text mt-3" style="font-weight: 300">Latest fuel prices in Ghana. Updated
                                 with actual prices at the physical pump.
                             </p>
@@ -153,7 +153,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/nssGHImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">NSS GH: Unofficial App</h4>
+                            <h4 class="card-title" style="font-weight: 700">NSS GH: Unofficial</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Access all of the National Service Scheme of Ghana services on NSS GH: Unofficial. </p>
 
@@ -174,7 +174,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/fudrinImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Fudrin App</h4>
+                            <h4 class="card-title" style="font-weight: 700">Fudrin</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
                                 Fudrin helps you turn your cooking abilities into everyday earning activity.</p>
 
@@ -197,7 +197,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/u4norImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">U4nor App</h4>
+                            <h4 class="card-title" style="font-weight: 700">U4nor</h4>
                             <p class="card-text mt-3" style="font-weight: 300">Relevant and reliable campus news curated
                                 for tertiary students in Ghana.</p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
@@ -252,7 +252,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary App</h4>
+                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
                             <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
                                 terms and their meanings in publishing, printing, design and illustration industry.</p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
@@ -307,7 +307,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/closeupImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">Closeup Social Media Campaign</h4>
+                            <h4 class="card-title" style="font-weight: 700">Closeup Promo</h4>
                             <p class="card-text mt-3" style="font-weight: 300">COVID-19 social media campaign for
                                 Closeup.</p>
                             <p style="font-weight: 300"><strong style="font-weight: 600">Role: </strong> Graphic
@@ -345,7 +345,7 @@
                     <div class="card2">
                         <img class="card-img-top" src="images/ocanImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
-                            <h4 class="card-title" style="font-weight: 700">OCAN Mineral Water</h4>
+                            <h4 class="card-title" style="font-weight: 700">OCAN</h4>
                             <p class="card-text mt-3" style="font-weight: 300">
                                 A sachet and bottled water company.</p>
 
