GH emoji removed

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                     <h1 class="hero_title" style="padding-left: 10%; padding-right:10%;">Desmond Kwame Nunoo</h1>
                     <h1 style="font-weight: 200; margin-left: 10%; margin-right: 10%;">I'm a Brand & Product Manager in
-                        Accra, Ghana 🇬🇭</h1>
+                        Accra, Ghana</h1>
 
                     <ul class="social-icons-header hero_desc" style="padding-left: 10%; padding-right:10%;">
                         <li><a class="linkedin" href="https://linkedin.com/in/desmondknunoo" target=”_blank”><i
