--- a/work.html
+++ b/work.html
@@ -228,7 +228,7 @@
             <div class="row">
 
 
-                <div class="col-lg-4 mt-4">
+                <!-- <div class="col-lg-4 mt-4">
                     <div class="card2">
                         <img class="card-img-top" src="images/ranxbrandImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
@@ -243,7 +243,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
 
@@ -276,7 +276,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 mt-4">
+                <!-- <div class="col-lg-4 mt-4">
                     <div class="card2">
                         <img class="card-img-top" src="images/awsImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
@@ -294,7 +294,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
           
