--- a/work.html
+++ b/work.html
@@ -124,7 +124,7 @@
                 </div>
 
 
-                <div class="col-lg-4 mt-4">
+                <!-- <div class="col-lg-4 mt-4">
                     <div class="card2">
                         <img class="card-img-top" src="images/dmsImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
@@ -137,6 +137,33 @@
 
                             <div class="text-left card-disabbled">
                                 <a class="btn btn-secondary">Private 🔒</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
+                                terms and their meanings in publishing, printing, design and illustration industry.</p>
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                                Designer & Android Developer
+
+                            </p>
+                            <div class="text-left col-md-4 col-sm-6 col-12">
+                                <ul class="card-button">
+
+                                    <li><a href="https://play.google.com/store/apps/details?id=com.deemiensa.dictionary"
+                                            class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
+                                    </li>
+
+                                    <li><a href="https://github.com/desmondknunoo/PublishingDictionary"
+                                            class="btn btn-secondary" target=”_blank”>GitHub →</a>
+                                    </li>
+
+
                             </div>
                         </div>
                     </div>
@@ -248,7 +275,7 @@
 
 
 
-                <div class="col-lg-4 mt-4">
+                <!-- <div class="col-lg-4 mt-4">
                     <div class="card2">
                         <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
                         <div class="card-body2">
@@ -274,7 +301,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="col-lg-4 mt-4">
                     <div class="card2">
