--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
 
-            <a class="navbar-brand" href="#">Desmond</a>
+            <a class="navbar-brand" href="#">Desmond Kwame Nunoo</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
