--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
             <div class="row mt-4 text-center">
 
                 <h4 style="font-weight: 300">
-                    Send me an email <a class="link-text" style="font-weight: 500" href="mailto:desmondknunoo@gmail.com"
+                    Drop an email <a class="link-text" style="font-weight: 500" href="mailto:desmondknunoo@gmail.com"
                         target=”_blank”>here</a>.
                 </h4>
             </div>
