--- a/work.html
+++ b/work.html
@@ -79,6 +79,86 @@
             <h1 class="text-center" style="color: #d7d7d7; margin-left: 2em; margin-right: 2em;">Product Development</h1>
             <hr>
             </p>
+
+
+
+            <div class="row">
+
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/sserpImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">SmartSale ERP Website - Redesign</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">
+                                Integrated technology for managing your business</p>
+
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Web Designer & Developer
+                            </p>
+                            <div class="text-left card-button">
+                                <a href="https://www.figma.com/proto/gQ4u5PlpK34n5gqdLoT8bL/SmartSale-Website?node-id=0%3A1" class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/opdImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">Orange Dictionary</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">An offline dictionary containing
+                                terms and their meanings in publishing, printing, design and illustration industry.</p>
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> UI/UX
+                                Designer & Android Developer
+
+                            </p>
+                            <div class="text-left col-md-4 col-sm-6 col-12">
+                                <ul class="card-button">
+
+                                    <li><a href="https://play.google.com/store/apps/details?id=com.deemiensa.dictionary"
+                                            class="btn btn-secondary" target=”_blank”>Google Play Store →</a>
+                                    </li>
+
+                                    <li><a href="https://github.com/desmondknunoo/PublishingDictionary"
+                                            class="btn btn-secondary" target=”_blank”>GitHub →</a>
+                                    </li>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mt-4">
+                    <div class="card2">
+                        <img class="card-img-top" src="images/awsImage.jpg" alt="Card image" style="width:100%">
+                        <div class="card-body2">
+                            <h4 class="card-title" style="font-weight: 700">africawork.space</h4>
+                            <p class="card-text mt-3" style="font-weight: 300">
+                                A community of African creatives that creates digital content.</p>
+
+                            <p style="font-weight: 300"><strong style="font-weight: 600">Role:<br></strong> Brand
+                                Designer & Web Developer
+
+                            </p>
+                            <div class="text-left card-button">
+                                <a href="https://africawork.space" class="btn btn-secondary" target=”_blank”>Website
+                                    →</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card2">
@@ -95,9 +175,24 @@
                                 Benjamin Ikeh, Charles Kwabena & Lennox Ayi-Bisahnox
                             </p>
                             <div class="text-left card-button">
-                                <a href="https://realestatetimesafrica.com/news/education/809/Zero+Schools+Under+Trees+Website+Launched+in+Accra"
                                     class="btn btn-secondary" target=”_blank”>Details →</a>
                             </div>
+
+
+
+                            <div class="text-left col-md-4 col-sm-6 col-12">
+                                <ul class="card-button">
+                                    <li><a href="https://www.figma.com/file/80K2ZP7d4TE2WKmqS67MPo/Schools-Under-Trees-Project"
+                                            class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
+                                    </li>
+                                    <li><a href="https://realestatetimesafrica.com/news/education/809/Zero+Schools+Under+Trees+Website+Launched+in+Accra"
+                                            class="btn btn-secondary" target=”_blank”>Article →</a>
+                                    </li>
+                                </ul>
+                            </div>
+
+
+
                         </div>
                     </div>
                 </div>
@@ -135,8 +230,9 @@
                                 Designer
                             </p>
 
-                            <div class="text-left card-disabbled">
-                                <a class="btn btn-secondary">Private 🔒</a>
+                            <div class="text-left card-button">
+                                <a href="https://www.figma.com/proto/dxl6jGTO8T50H64JpmcLeq/Document-Management-System"
+                                    class="btn btn-secondary" target=”_blank”>Figma Prototype →</a>
                             </div>
                         </div>
                     </div>
